[gd_scene load_steps=6 format=3 uid="uid://dgfnu7365whg1"]

[ext_resource type="Script" path="res://combat_main.gd" id="1_b7gf2"]
[ext_resource type="Script" path="res://DiceService.gd" id="1_opug8"]
[ext_resource type="Texture2D" uid="uid://b6468kpnhoiis" path="res://unit_silhouette.png" id="3_slgc8"]
[ext_resource type="Script" path="res://Player.gd" id="4_m8uvx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vgedg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_slgc8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CombatMain" type="Node2D"]
script = ExtResource("1_b7gf2")

[node name="DiceService" type="Node2D" parent="."]
script = ExtResource("1_opug8")

[node name="UnitService" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="UnitService"]
position = Vector2(155, 310)
script = ExtResource("4_m8uvx")
HEALTH_MAX = 8
health = 8
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UnitService/Player"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_vgedg")

[node name="ProgressBar" type="ProgressBar" parent="UnitService/Player"]
self_modulate = Color(1, 0, 0, 1)
offset_left = -85.0
offset_top = -99.0
offset_right = 82.0
offset_bottom = -72.0
max_value = 8.0
show_percentage = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_right = 464.0
offset_bottom = 118.0

[node name="Button" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Roll"

[node name="DieRoll" type="Label" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(152, 118)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthRead" type="Label" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(152, 118)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="UI/HBoxContainer/Button" to="." method="_on_button_button_down"]
